# summer23-morinlandon12

./: .gitignore
.github/workflows/: tests.yml
final_project/: Dockerfile  README.md  azure_login_aks.sh  build_push.sh  example_curl.sh  load.js  run.sh
final_project/.k8s/base/: config-map.yaml  deployment-project.yaml  deployment-redis.yaml  kustomization.yaml  persistent-volume.yaml
final_project/.k8s/dev/: kustomization.yaml  patch-deployment-project.yaml
final_project/.k8s/prod/: kustomization.yaml  patch-deployment-project.yaml  patch-deployment-project_copy.yaml  virtual-service.yaml
final_project/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
final_project/mlapi/: pyproject.toml
final_project/mlapi/src/: main.py
final_project/mlapi/tests/: test_docs.py  test_mlapi.py
lab_1/: run.sh
lab_1/lab1/: pyproject.toml
lab_1/lab1/src/: main.py
lab_1/lab1/tests/: test_lab1.py
lab_2/: run.sh
lab_2/lab2/: Dockerfile  README.md  pyproject.toml
lab_2/lab2/src/: main.py
lab_2/lab2/tests/: test_lab2.py
lab_2/lab2/trainer/: predict.py
lab_3/: run.sh
lab_3/lab3/: Dockerfile  README.md  pyproject.toml  run.sh
lab_3/lab3/infra/: service-redis.yaml
lab_3/lab3/src/: main.py
lab_3/lab3/tests/: test_hello.py
lab_4/: README.md  azure_login_aks.sh  example_curls.sh
lab_4/.k8s/base/: deployment-lab4.yaml  kustomization.yaml  service-redis.yaml
lab_4/.k8s/dev/: kustomization.yaml  patch-deployment-lab4.yaml
lab_4/.k8s/prod/: kustomization.yaml  patch-deployment-lab4.yaml  patch-deployment-lab4_copy.yaml  virtual-service.yaml
lab_4/lab4/: README.md  build_push.sh  model_pipeline.pkl
lab_4/lab4/src/: main.py
(+5 files in other folders)
