[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["morinlandon12 <83619209+morinlandon12@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
