[tool.poetry]
name = "lab2"
version = "0.2.0"
description = ""
authors = ["Landon Morin <morinlandon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
requests = "^2.31"
joblib = "^1.2.0"
scipy = "^1.10"
scikit-learn = "1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
black = "^23.3"
isort = "^5.12"
httpx = "^0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
